Inject logic to state

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <main id="game">
       <table id="board">
-        <tr id="cellContainer"></tr>
+        <div id="boardContainer"></div>
       </table>
 
     </main>
