Final version with two boards

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         td.cell_hit{
           background-color: red;
         }
+        .table {
+          max-width: 40%;
+          margin-left: 5%;
+          margin-right: 5%;
+          box-sizing: border-box;
+          float: left;
+        }
       </style>
 
   <head>
