Add style to tables

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         td.cell_hit{
           background-color: red;
         }
-        .table {
+        table {
           max-width: 40%;
           margin-left: 5%;
           margin-right: 5%;
@@ -29,9 +29,9 @@
   <head>
 <body>
     <main id="game">
-      <table id="board">
+      <div id="board">
         <div id="boardContainer"></div>
-      </table>
+      </div>
 
     </main>
     <script src="game.js" type="text/javascript"></script>
